# search-repo

./: .gitignore  README.md
backend/: Makefile  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/features/repositories/: __init__.py  constants.py  controller.py  models.py  routes.py  service.py  validators.py
backend/src/features/repositories/domain/: __init__.py  repo_scoring.py
backend/src/integrations/: repository_provider.py
backend/src/integrations/github/: __init__.py  client.py  dto.py  services.py
backend/src/shared/: __init__.py
backend/src/shared/core/: config.py  exceptions.py
backend/src/shared/infrastructure/: cache.py  data_service.py  http_client.py
backend/src/shared/models/: __init__.py  pagination.py  repository.py  search_filters.py
backend/src/shared/utils/: pagination.py
backend/tests/: conftest.py
backend/tests/features/repositories/: test_repository_service.py  test_routes.py  test_validators.py
backend/tests/features/repositories/domain/: test_repo_scoring.py
backend/tests/integrations/github/: test_github_client.py  test_github_dto.py  test_github_services.py
backend/tests/shared/infrastructure/: test_cache.py  test_data_service.py
backend/tests/shared/utils/: test_pagination.py
frontend/: package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/app/: App.tsx  index.css
frontend/src/pages/repositories/: constants.ts  index.tsx  types.ts
frontend/src/shared/api/: apiClient.ts
frontend/src/shared/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  language-selector.tsx  (+4 more)
frontend/tests/: setup.ts
(+6 files in other folders)
